# Security

./: .gitignore  BLOCKCHAIN_INFO.md  CHANGELOG.md  PHAM_BLOCKCHAIN_LOG.md  README.md  README_EN.md  SIGNATURE.sha256  pyproject.toml
docs/: ARCHITECTURE.md  ARCHITECTURE_EN.md  FOUNDATION_LAYERS.md  FOUNDATION_LAYERS_EN.md  GITHUB_OVERVIEW.md  SECURITY_MODEL.md  SECURITY_MODEL_EN.md
memory_phase_kernel/: __init__.py  contracts.py  dynamics.py  kernel.py  memory_store.py  phase_control.py  profile.py  raw_vault.py  resonance.py  session_loop.py  trust.py
memory_phase_kernel/extensions/: __init__.py  keystroke_stub.py  protocols.py
memory_phase_kernel/integrations/: __init__.py  first_order_evidence.py  governance_vaults.py
scripts/: verify_signature.py
tests/: test_dynamics.py  test_extensions.py  test_first_order_bridge.py  test_foundation_layers.py  test_governance_vaults.py  test_kernel.py  test_resonance.py  test_session_loop.py
